# zephyr

./: Kconfig.zephyr  codechecker.json  guidelines.json  scope.yml
.github/workflows/: eclair_guideline_check.yml
cmake/modules/: FindScaTools.cmake  kconfig.cmake
cmake/sca/codechecker_cppcheck/: sca.cmake
cmake/sca/cppcheck/: sca.cmake
cmake/sca/eclair/: Kconfig.eclair  eclair.config  eclair.template  sca.cmake
cmake/sca/eclair/ECL/: adopted_deviations.ecl  call_properties.ecl  reports.ecl
doc/: conf.py  index.rst  zephyr.doxyfile.in
doc/_scripts/: gen_safety_scope.py
doc/develop/sca/: eclair.rst  index.rst
doc/reqtrace/: index.rst
drivers/entropy/: Kconfig.rv32m1
include/zephyr/drivers/: i2s.h
include/zephyr/fs/: nvs.h
include/zephyr/sys/: fdtable.h
kernel/: init.c  sched.c
samples/subsys/nvs/: prj.conf
samples/subsys/nvs/boards/: nucleo_g431rb.overlay
samples/subsys/nvs/src/: main_flash.c
scripts/: get_scope.py  identify_scopes.py  requirements-doc.txt
scripts/reqtrace/: create_req.py  requirements.csv
subsys/: CMakeLists.txt  Kconfig
subsys/fs/nvs/: nvs.c
tests/subsys/fs/nvs/: Kconfig  prj_nvs_eeprom.conf  testcase.yaml
tests/subsys/fs/nvs/boards/: qemu_x86.overlay
tests/subsys/fs/nvs/src/: main.c
